<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Fragments.ForgotFragment">

    <TextView
        android:id="@+id/forgot_text"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="24dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/textColor"
        android:textSize="32sp"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_forgot_layout"
        android:layout_below="@id/forgot_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtForgotMail"
            android:inputType="textEmailAddress"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:layout_marginBottom="12dp"
            android:hint="@string/email"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/forgotBtn"
        android:padding="20dp"
        android:textAllCaps="false"
        android:enabled="false"
        android:textSize="16sp"
        android:textColor="@color/textColor"
        android:text="@string/reset_password"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/grey_button"
        android:layout_below="@id/text_forgot_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/forgotProgress"
        android:visibility="invisible"
        android:padding="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_below="@id/text_forgot_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>