<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainContainerPostDetails"
    tools:context=".PostDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_alignParentTop="true"
        android:id="@+id/appBarLayDetails"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        android:elevation="0dp">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarDetails"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_gravity="top"
            android:background="@android:color/transparent"
            app:theme="@style/Widget.AppCompat.Toolbar">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/tb_back_details"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:src="@drawable/ic_chevron_left_black_24dp"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_centerInParent="true"
                    android:text="@string/logo"
                    android:id="@+id/toolbar_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="#15b83d"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lang_details"
                    android:textColor="#6C727C"
                    android:drawableStart="@drawable/ic_expand_more_black_24dp"
                    android:textSize="16sp"
                    android:text="@string/en"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="14dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/detailRelative"
        android:layout_below="@id/appBarLayDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="6dp">


        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/dotsDetails"
            android:src="@drawable/ic_brightness_1_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_toEndOf="@+id/dotsDetails"
            android:textAllCaps="false"
            android:id="@+id/all_name_details"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textColor="#3b3b3b"
            android:text="21/03/2019"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/isDoneDetails"
            android:text="done"
            android:layout_marginEnd="30dp"
            android:layout_alignParentEnd="true"
            android:textColor="#1DC21E"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <ScrollView
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/detailRelative"
        android:layout_above="@id/done_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <android.support.design.widget.TextInputLayout
                android:id="@+id/tarix_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/date_editText"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:textColorHint="@color/textColor"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/tarix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/movzu_layout"
                android:layout_below="@id/tarix_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/movzu_editText"
                    android:layout_marginStart="24dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginEnd="24dp"
                    android:textColorHint="@color/textColor"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/movzu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/metn_layout"
                android:layout_below="@id/movzu_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/metn_editText"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColorHint="@color/textColor"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/metn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reklam_layout"
                android:layout_below="@id/metn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/reklam_editText"
                    android:layout_marginStart="24dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginEnd="24dp"
                    android:textColorHint="@color/textColor"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/reklam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>


    <TextView
        android:id="@+id/done_confirm"
        android:text="@string/udone"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="30dp"
        android:textColor="#15B83D"
        android:layout_above="@id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/doneBox"
        android:buttonTint="#15B83D"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/done_confirm"
        android:layout_marginBottom="25dp"
        android:layout_above="@id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/undone_confirm"
        android:text="@string/uundone"
        android:textSize="16sp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/undone_checkbox"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="30dp"
        android:textColor="#E23D3A"
        android:layout_above="@id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/undone_checkbox"
        android:buttonTint="#E23D3A"
        android:layout_marginEnd="24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp"
        android:layout_above="@id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:padding="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/btnConfirm"
        android:text="@string/tesdiqle"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:background="@drawable/blue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>