<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriesActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_alignParentTop="true"
        android:id="@+id/appBarLayCategories"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        android:elevation="0dp">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarCategories"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_gravity="top"
            android:background="@android:color/transparent"
            app:theme="@style/Widget.AppCompat.Toolbar">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/tb_back_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:src="@drawable/ic_chevron_left_black_24dp"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_centerInParent="true"
                    android:text="@string/logo"
                    android:id="@+id/toolbar_categories_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="#15b83d"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lang_categories"
                    android:textColor="#6C727C"
                    android:drawableStart="@drawable/ic_expand_more_black_24dp"
                    android:textSize="16sp"
                    android:text="@string/en"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="14dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/packet_text_categories"
        android:layout_below="@id/appBarLayCategories"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="24dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/textColor"
        android:textSize="32sp"
        android:text="@string/silver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/date"
        android:textSize="16sp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/appBarLayCategories"
        android:layout_toStartOf="@id/date_categories"
        android:textColor="#979797"
        android:id="@+id/static_date_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/date_categories"
        android:text="@string/june"
        android:drawablePadding="10dp"
        android:drawableEnd="@drawable/ic_expand_more_black_24dp"
        android:textSize="18sp"
        android:textColor="#979797"
        android:layout_marginTop="37dp"
        android:layout_below="@id/appBarLayCategories"
        android:layout_marginEnd="24dp"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <View
        android:layout_marginEnd="24dp"
        android:layout_toEndOf="@id/static_date_categories"
        android:background="#979797"
        android:layout_below="@id/date_categories"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_below="@id/packet_text_categories"
        android:background="@color/colorPrimary"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingStart="120dp"
        android:paddingEnd="120dp" />

    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/viewPager"
        android:layout_marginTop="24dp"
        android:id="@+id/categories_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/categoriesProgress"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/postAddFab"
        app:fabSize="normal"
        android:backgroundTint="#6C727C"
        app:borderWidth="0dp"
        app:elevation="6dp"
        android:src="@drawable/ic_add_white_24dp"
        app:rippleColor="@color/deactive"
        android:layout_margin="15dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>